--- a/c64say/lib/dune
+++ b/c64say/lib/dune
@@ -1,6 +1,6 @@
 (library
  (public_name c64say)
  (modules c64chars c64colors)
- (libraries astring)
+ (libraries astring stitchy)
  (wrapped false)
 )
