--- a/dune
+++ b/dune
@@ -35,7 +35,7 @@
    (run hcat -o hroygb.json hroyg.json blue.json)
    (run hcat -o hroygbv.json hroygb.json purple.json)
 
-   (run c64stitch -o center.json "be gay\ndo crimes")
+   (run c64stitch -o center.json "be gay\nfind primes")
    (run embellish_stitch --top=vroygbv.json --side=hroygbv.json --corner=black.json --center=center.json -o be_gay_do_crimes.json)
    (run stitchpattern -i be_gay_do_crimes.json -o be_gay_do_crimes.pdf)
    (run evince be_gay_do_crimes.pdf)
