--- a/dune
+++ b/dune
@@ -15,25 +15,31 @@
  (name be_gay_do_crimes)
  (action
   (progn
-   (run c64stitch -o red.json -t red "\\")
-   (run c64stitch -o orange.json -t orange "\\")
-   (run c64stitch -o yellow.json -t yellow "\\")
-   (run c64stitch -o green.json -t green "\\")
-   (run c64stitch -o blue.json -t blue "\\")
-   (run c64stitch -o purple.json -t purple "\\")
+   (run c64stitch -o red.json -t red "2")
+   (run c64stitch -o orange.json -t orange "3")
+   (run c64stitch -o yellow.json -t yellow "5")
+   (run c64stitch -o green.json -t green "7")
+   (run c64stitch -o hblue.json -t blue "11")
+   (run c64stitch -o hpurple.json -t purple "13")
    (run c64stitch -o black.json "\\")
+
+   (run c64stitch -o vblueone.json -t blue "1")
+   (run hcat -o vblueeleven.json vblueone.json vblueone.json)
+   (run c64stitch -o vpurpleone.json -t purple "1")
+   (run c64stitch -o vpurplethree.json -t purple "3")
+   (run hcat -o vpurplethirteen.json vpurpleone.json vpurplethree.json)
 
    (run vcat -o vro.json red.json orange.json)
    (run vcat -o vroy.json vro.json yellow.json)
    (run vcat -o vroyg.json vroy.json green.json)
-   (run vcat -o vroygb.json vroyg.json blue.json)
-   (run vcat -o vroygbv.json vroygb.json purple.json)
+   (run vcat -o vroygb.json vroyg.json hblue.json)
+   (run vcat -o vroygbv.json vroygb.json hpurple.json)
 
    (run hcat -o hro.json red.json orange.json)
    (run hcat -o hroy.json hro.json yellow.json)
    (run hcat -o hroyg.json hroy.json green.json)
-   (run hcat -o hroygb.json hroyg.json blue.json)
-   (run hcat -o hroygbv.json hroygb.json purple.json)
+   (run hcat -o hroygb.json hroyg.json vblueeleven.json)
+   (run hcat -o hroygbv.json hroygb.json vpurplethirteen.json)
 
    (run c64stitch -o center.json "be gay\nfind primes")
    (run embellish_stitch --top=vroygbv.json --side=hroygbv.json --corner=black.json --center=center.json -o be_gay_do_crimes.json)
