find primesgit status

--- a/dune
+++ b/dune
@@ -41,8 +41,10 @@
    (run hcat -o hroygb.json hroyg.json vblueeleven.json)
    (run hcat -o hroygbv.json hroygb.json vpurplethirteen.json)
 
-   (run c64stitch -o center.json "be gay\nfind primes")
-   (run embellish_stitch --top=vroygbv.json --side=hroygbv.json --corner=black.json --center=center.json -o be_gay_do_crimes.json)
-   (run stitchpattern -i be_gay_do_crimes.json -o be_gay_do_crimes.pdf)
-   (run evince be_gay_do_crimes.pdf)
+   (run c64stitch -o be_gay.json "be gay")
+   (run c64stitch -o find_primes.json "find primes")
+   (run hcat -o saying.json be_gay.json find_primes.json)
+   (run embellish_stitch --top=vroygbv.json --side=hroygbv.json --corner=black.json --center=saying.json -o be_gay_find_primes.json)
+   (run stitchpattern -i be_gay_find_primes.json -o be_gay_find_primes.pdf)
+   (run evince be_gay_find_primes.pdf)
         )))
