--- a/stitchy/lib/dune
+++ b/stitchy/lib/dune
@@ -1,6 +1,15 @@
 (library
  (name stitchy)
  (public_name stitchy)
+ (modules dMC rGB symbol thread types)
  (libraries yojson ppx_deriving.eq ppx_deriving_yojson.runtime base64 crowbar)
- (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving_crowbar)
-))
+ (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving_crowbar))
+)
+
+(library
+ (name files)
+ (public_name stitchy.files)
+ (modules files)
+ (libraries stitchy yojson)
+ (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving_crowbar))
+)
