--- a/stitchy/lib/dune
+++ b/stitchy/lib/dune
@@ -2,7 +2,7 @@
  (name stitchy)
  (public_name stitchy)
  (modules dMC rGB symbol thread types)
- (libraries yojson ppx_deriving.eq ppx_deriving_yojson.runtime base64 crowbar)
+ (libraries yojson ppx_deriving.eq ppx_deriving_yojson.runtime base64 crowbar fmt)
  (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving_crowbar))
 )
 
