--- a/dune
+++ b/dune
@@ -15,11 +15,19 @@
  (name butt)
  (action
   (progn
-   (run c64stitch -o butt.json "butt")
-   (run c64stitch -o dash.json -- "-")
-   (run embellish_stitch --corner=dash.json --side=dash.json --center=butt.json -o border_butt.json)
+   (run c64stitch -o butt.json " butt ")
+   (run c64stitch -o border.json -- "+")
+   (run embellish_stitch --top=border.json --corner=border.json --side=border.json --center=butt.json -o border_butt.json)
    (run notty_canvas border_butt.json)
 )))
+
+(alias
+ (name cards)
+ (action
+  (progn
+   (run c64stitch -o suits.json "♠️♣️♦️♥️")
+   (run notty_canvas suits.json)
+   )))
 
 (alias
  (name be_gay_find_primes)
