center annotation; fix for vertical

--- a/listing/dune
+++ b/listing/dune
@@ -1,5 +1,5 @@
 (executable
  (name listing)
  (public_name listing)
- (libraries cmdliner imagelib imagelib-unix rresult stitchy stitchy.files)
+ (libraries cmdliner embellish.compose embellish.compose_stitch imagelib imagelib-unix rresult stitchy stitchy.files)
 )
