--- a/psf2stitchfont/src/dune
+++ b/psf2stitchfont/src/dune
@@ -7,7 +7,7 @@
 (executable
  (public_name psf2sqlite)
  (modules psf2sqlite)
- (libraries bos caqti caqti-driver-sqlite3 caqti-lwt cmdliner lwt psf2stitchfont sqlite stitchy)
+ (libraries bos caqti caqti-driver-sqlite3 caqti-lwt cmdliner lwt psf2stitchfont sqlite3 stitchy)
 )
 
 (alias
@@ -16,6 +16,7 @@
  (action
   (progn
    (run readpsf fonts/Bm437_ATI_8x8_6.fnt.psf)
+   (run readpsf fonts/Bm437_IBM_VGA9-2x_12.fnt.psf)
 )))
 
 (alias
@@ -23,5 +24,7 @@
  (deps (source_tree fonts))
  (action
   (progn
-   (run psf2sqlite --name ibm_vga --db tmpfonts.sqlite3 fonts/Bm437_IBM_VGA9-2x_12.fnt.psf)
+   (run psf2sqlite --name ati_font --db /tmp/fonts.sqlite3 fonts/Bm437_ATI_8x8_6.fnt.psf)
+   (run c64stitch --font ati_font --db /tmp/fonts.sqlite3 -o dosbutts.json 'halp')
+   (run notty_canvas dosbutts.json)
   )))
