--- a/stitchy/lib/dune
+++ b/stitchy/lib/dune
@@ -2,8 +2,8 @@
  (name stitchy)
  (public_name stitchy)
  (modules dMC rGB symbol thread types)
- (libraries yojson ppx_deriving.eq ppx_deriving_yojson.runtime base64 crowbar fmt)
- (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving_crowbar))
+ (libraries yojson ppx_deriving.eq ppx_deriving_yojson.runtime base64 fmt)
+ (preprocess (pps ppx_deriving.eq ppx_deriving_yojson))
 )
 
 (library
@@ -11,7 +11,7 @@
  (public_name stitchy.transformers)
  (modules transformers)
  (libraries imagelib imagelib-unix stitchy)
- (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving_crowbar))
+ (preprocess (pps ppx_deriving.eq ppx_deriving_yojson))
 )
 
 (library
@@ -19,5 +19,5 @@
  (public_name stitchy.files)
  (modules files)
  (libraries stitchy yojson)
- (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving_crowbar))
+ (preprocess (pps ppx_deriving.eq ppx_deriving_yojson))
 )
